--- a/mojichimera/src/main/resources/mojichimeraResources/localization/zhs/mojichimera-Augment-Strings.json
+++ b/mojichimera/src/main/resources/mojichimeraResources/localization/zhs/mojichimera-Augment-Strings.json
@@ -106,7 +106,7 @@
         "EXTRA_TEXT": [" NL 目标敌人每有一种负面效果，抽 %d 张牌。"]
     },
     "mojichimera:OverpoweredMod": {
-        "TEXT": ["强力", "", "本牌耗能增加 #b1 。 NL #y虚无。 NL 卡牌数值增加 #b100% 。"],
+        "TEXT": ["强力", "", "本牌耗能增加 #b1 。 NL #y虚无。 NL 卡牌数值增加 #b133% 。"],
         "EXTRA_TEXT": [" 虚无 。 NL "]
     },
     "mojichimera:OvershootMod": {
@@ -118,8 +118,8 @@
         "EXTRA_TEXT": [" NL 平静 ：抽 %d 张牌。"]
     },
     "mojichimera:PersistentMod": {
-        "TEXT": ["长驻", "", "随机丢弃 #b1 张牌。 NL 如果成功丢弃牌，将本牌返回手牌。"],
-        "EXTRA_TEXT": [" NL 随机丢弃 %d 张牌。 NL 如果成功丢弃牌，将本牌返回手牌。"]
+        "TEXT": ["长驻", "", "丢弃随机 #b1 张手牌。 NL 如果成功丢弃牌，将本牌返回手牌。"],
+        "EXTRA_TEXT": [" NL 丢弃随机 %d 张手牌。 NL 如果成功丢弃牌，将本牌返回手牌。"]
     },
     "mojichimera:ReleaseMod": {
         "TEXT": ["发布", "", "本牌耗能增加 #b1 。 NL 回合开始时，再次打出本牌。 NL #y消耗 。 NL 源于 #b崩坠 #y铜制机械人偶 的卡牌 #b完全公开 。"],
@@ -170,6 +170,10 @@
         "TEXT": ["未觉醒", "", "#y虚无 。 NL 被 #y消耗 的 #b2 回合后，将一张 #y觉醒 的复制放入手牌。"],
         "EXTRA_TEXT": [" NL 被 消耗 的 %d 回合后，将一张 觉醒 的复制放入手牌。"]
     },
+    "mojichimera:UnloadMod": {
+        "TEXT": ["乾坤", "", "卡牌数值增加 #b133% 。 NL 打出时，丢弃所有非技能牌。"],
+        "EXTRA_TEXT": [" NL 丢弃所有非技能牌。"]
+    },
     "mojichimera:UnsociableMod": {
         "TEXT": ["孤僻", "", "本牌的造成的伤害和获得的 #y格挡 增加 #b100% 。 NL 手牌中每有一张同类型牌，减少基础值的 #b25% 。"],
         "EXTRA_TEXT": [" NL 手牌中每有一张同类型牌，伤害和 格挡 减少 %d%% 。"]
@@ -181,6 +185,10 @@
     "mojichimera:XXMod": {
         "TEXT": ["倍增", "", "本牌生效X次。"],
         "EXTRA_TEXT": [" NL 生效X次。"]
+    },
+    "mojichimera:AfterAngerMod": {
+        "TEXT": ["", "余怒", "创建并丢弃本牌的一张复制。"],
+        "EXTRA_TEXT": [" NL 创建并丢弃本牌的一张复制。"]
     },
     "mojichimera:BarrageMod": {
         "TEXT": ["", "齐射", "丢弃手牌中所有 #y状态牌，抽等量的牌。 NL 源于 #b崩坠 #y铜制机械人偶 的卡牌 #b错误齐射 。"],
@@ -224,7 +232,7 @@
         "EXTRA_TEXT": [" NL 获得 %d 点 临时 敏捷 。"]
     },
     "mojichimera:EducationalMod": {
-        "TEXT": ["教育", "", "如果这张牌从你的手牌中被丢弃，随机升级 #b1(+1) 张牌。"],
+        "TEXT": ["教育性", "", "如果这张牌从你的手牌中被丢弃，随机升级 #b1(+1) 张牌。"],
         "EXTRA_TEXT": [" NL 如果这张牌从你的手牌中被丢弃，随机升级 %s 张牌。", " NL 如果这张牌从你的手牌中被丢弃，随机升级 %s 张牌。"]
     },
     "mojichimera:EstablishedMod": {
@@ -401,8 +409,8 @@
         "NOTES": ["Common"]
     },
     "mojichimera:AttentiveMod": {
-        "TEXT": ["聚精", "", "再打出一次。 NL 随机丢弃 #b2 张牌。"],
-        "EXTRA_TEXT": [" NL 再打出一次。 NL 随机丢弃 %d 张牌。"]
+        "TEXT": ["聚精", "", "再打出一次。 NL 丢弃随机 #b2 张手牌。"],
+        "EXTRA_TEXT": [" NL 再打出一次。 NL 丢弃随机 %d 张手牌。"]
     },
     "mojichimera:BankruptMod": {
         "TEXT": ["破产", "", "若拥有不超过 #b100(150) #y金币 ，本牌耗能减少 [E] 。"],
@@ -421,6 +429,10 @@
         "EXTRA_TEXT": [" NL 随机 消耗 拥有的 %s 张 状态牌 或 诅咒 牌 。", " NL 随机 消耗 拥有的 %s 张 状态牌 或 诅咒 牌 。"],
         "NOTES": ["bronze:WildBeam"]
     },
+    "mojichimera:CombosMod": {
+        "TEXT": ["", "连续技", "如果本场战斗中打出的上一张牌是技能牌，打出后回到手牌。"],
+        "EXTRA_TEXT": [" NL 如果本场战斗中打出的上一张牌是技能牌，打出后回到手牌。"]
+    },
     "mojichimera:ConcentratedMod": {
         "TEXT": ["全神", "", "本牌耗能减少 #b2 。 NL 丢弃 #b3(2) 张牌。"],
         "EXTRA_TEXT": [" NL 丢弃 %d 张牌。"]
@@ -432,6 +444,10 @@
     "mojichimera:DelayedMod": {
         "TEXT": ["延迟", "", "本牌耗能减少 #b1 。 NL 下回合开始时打出。"],
         "EXTRA_TEXT": ["下回合开始时： NL "]
+    },
+    "mojichimera:DiscordMod": {
+        "TEXT": ["不和", "", "卡牌数值增加 #b50% 。 NL 在手牌中每打出一张其他牌，丢弃随机 #b1 张手牌。"],
+        "EXTRA_TEXT": [" NL 在手牌中每打出一张其他牌，丢弃随机 %d 张手牌。"]
     },
     "mojichimera:EmptiedMod": {
         "TEXT": ["空无", "", "再打出一次 。 NL 将 #b1 张 #y虚空 添加到弃牌堆。"],
@@ -519,8 +535,8 @@
         "EXTRA_TEXT": [" NL 将 %d 张 *伤口 放入手牌。"]
     },
     "mojichimera:PreemptiveMod": {
-        "TEXT": ["先发", "", "在手牌中未打出非 #y先发 牌时，造成的伤害和获得的 #y格挡 增加 #b33% 。"],
-        "EXTRA_TEXT": [" NL 在手牌中未打出非 *先发 牌时，伤害和 格挡 增加 %d%% 。"]
+        "TEXT": ["先发", "", "在手牌中未打出 非 #y优先 牌时，造成的伤害和获得的 #y格挡 增加 #b33% 。 NL 优先牌包括 #y绝对化 、 #y先发 和 #y预留 。"],
+        "EXTRA_TEXT": [" NL 在手牌中未打出非优先牌时，伤害和 格挡 增加 %d%% 。"]
     },
     "mojichimera:ReactiveMod": {
         "TEXT": ["活性", "", "#y保留 。 NL 每当这张牌被 #y保留 时，将其在本场战斗的魔法数字增加 #b1 。"],
@@ -546,6 +562,14 @@
         "TEXT": ["租赁", "", "本牌耗能减少 #b1 。 NL 打出时失去 #b6 #y金币 。"],
         "EXTRA_TEXT": [" NL 失去 %d 金币。"]
     },
+    "mojichimera:ReservedMod": {
+        "TEXT": ["预留", "", "卡牌数值增加 #b33% 。 NL 在手牌中打出非 #y优先 牌时，丢弃本牌。 NL 优先牌包括 #y绝对化 、 #y先发 和 #y预留 。"],
+        "EXTRA_TEXT": [" NL 在手牌中打出非优先牌时，丢弃本牌。"]
+    },
+    "mojichimera:RetreatingMod": {
+        "TEXT": ["回撤", "", "如果本场战斗中打出的上一张牌是攻击牌，打出后回到手牌。 NL 源于 #b观者 的弃用卡牌 #b撒手 。"],
+        "EXTRA_TEXT": [" NL 如果本场战斗中打出的上一张牌是攻击牌，打出后回到手牌。"]
+    },
     "mojichimera:SelfTaughtMod": {
         "TEXT": ["自学", "", "打出后在本场战斗中 #y升级。"],
         "EXTRA_TEXT": [" NL 在本场战斗中 升级。"]
@@ -553,6 +577,10 @@
     "mojichimera:ShackleMod": {
         "TEXT": ["镣铐", "", "所有敌人失去 #b2(+1) 点力量 1 回合。"],
         "EXTRA_TEXT": [" NL 所有敌人失去 %s 点力量 1 回合。"]
+    },
+    "mojichimera:SlimyMod": {
+        "TEXT": ["黏滑", "", "卡牌数值增加 #b50% 。 NL 抽到本牌时，丢弃随机 #b1 张手牌。"],
+        "EXTRA_TEXT": [" NL 抽到本牌时，丢弃随机 %d 张手牌。"]
     },
     "mojichimera:StrenuousMod": {
         "TEXT": ["尽力", "", "卡牌数值增加 #b25% 。 NL 丢弃 #b1 张牌。"],
@@ -650,16 +678,6 @@
     "mojichimera:packmaster_PrismaticMod": {
         "TEXT": ["棱镜", "", "将 #b1 张带有 #y虚无 的随机 #y异色 牌放入手牌。"],
         "EXTRA_TEXT": [" NL 将 %d 张带有 虚无 的随机 anniv5:异色 牌放入手牌。"]
-    },
-    "mojichimera:ComboMod": {
-        "TEXT": ["连击", "", "造成的伤害减少 #b33% 。 NL 如果本场战斗中打出的上一张牌是攻击牌，再打出一次。"],
-        "EXTRA_TEXT": [" NL 如果本场战斗中打出的上一张牌是攻击牌，再打出一次。"],
-        "NOTES": ["Deprecated"]
-    },
-    "mojichimera:RetreatingMod": {
-        "TEXT": ["回撤", "", "如果本场战斗中打出的上一张牌是攻击牌，本牌打出后回到手牌。"],
-        "EXTRA_TEXT": [" NL 如果本场战斗中打出的上一张牌是攻击牌，本牌打出后回到手牌。"],
-        "NOTES": ["Deprecated"]
     },
     "mojichimera:FailureMod": {
         "TEXT": ["失败作", "", "再打出 #b7 次 。 NL 失去 #b3 点生命和 #b15 #y金币 。 NL 获得 #b2 层 #y易伤 、 #y虚弱 和 #y脆弱 。 NL 将 #b1 张 #y虚空 洗入抽牌堆 。"],
